--- a/accordion.html
+++ b/accordion.html
@@ -53,7 +53,7 @@
                 <li class="open">
                     <div class="question">
                         <h2>Will I be rich</h2>
-                        <i class="fas fa-chevron-down"></i>
+                        span class="glyphicon glyphicon-menu-down icon"></span>
                     </div>
                     <div class="answer">
                         <p>
