--- a/css-transition/index.html
+++ b/css-transition/index.html
@@ -19,13 +19,20 @@
             </div>
         </div>
         <div class="col-sm-4">
-            <div class="box">
+            <div class="box button">
                 <h3>Button Transition</h3>
+                <a href="#" class="btn btn-success btn-lg btn-block">
+                    Click me!
+                </a>
             </div>
         </div>
         <div class="col-sm-4">
-            <div class="box">
+            <div class="box opacity">
                 <h3>Opacity Transition</h3>
+                <p>Try to click this button</p>
+                <a href="" class="btn btn-danger lg">
+                    Cant catch me
+                </a>
             </div>
         </div>
     </div>
