--- a/css-transition/index.html
+++ b/css-transition/index.html
@@ -36,6 +36,31 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="box movement">
+                <h3>Movement transition</h3>
+                <a href="#" class="btn btn-info">
+                    Going up
+                </a>
+                <a href="#" class="btn btn-warning">
+                    Going down
+                </a>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="box rotate">
+                <h3>Rotate transition</h3>
+                <p>Turning around and around</p>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="box delayed">
+                <h3>delayded transition</h3>
+
+            </div>
+        </div>
+    </div>
 </section>
 </body>
 </html>
