--- a/css-transition/index.html
+++ b/css-transition/index.html
@@ -62,5 +62,25 @@
         </div>
     </div>
 </section>
+<section>
+    <h2>
+        Advanced  Transition</h2>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="profile-box">
+                    <img src="http://placekitten.com/300/300" alt="">
+                    <div class="box-content">
+                        <h3>Stefan Hancar</h3>
+                        <ul class="social-links">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+
 </body>
 </html>
