--- a/conditional.html
+++ b/conditional.html
@@ -106,7 +106,7 @@ const movieRevies = {
     'Kill bill': 8
 };
 for (let movie of object.keys(movieRevies)){
-    console.log(movie);
+    console.log(movie, MSPointerEvent[movie]);
 }
 
  
