--- a/callback.html
+++ b/callback.html
@@ -18,7 +18,7 @@
 <script>
 
     //a callback function is a function passed into anther function as an argument, which is then invoked 
-    // inside the outer function
+    // inside the outer function-
 function calltwice(func){
     func();
     func();
@@ -62,6 +62,8 @@ moveX(btn,100,1000,()=>{  //callback
 
     });
 });
+
+//request(onSuccess,onFailure)
 
 </script>
    
