--- a/index.html
+++ b/index.html
@@ -2,20 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Document</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <title>Document</title>
-</head>
-<style>
-    body, .jumbotron {padding: 30px;}
-    .text-giant {font-size: 40px;}
+   <body>
+       <button>Move Me!</button>
+ 
    
-</style>
-<body>
    
-     
+    <style>
+   
+       
+       </style>
+ <body>
 <script>
+      const btn = document.querySelector('button');
+  setTimeout(()=>{
+      btn.style.transform ='translateX(100px)';
+      setTimeout(()=>{
+      btn.style.transform ='translateX(200px)';
+      setTimeout(()=>{
+      btn.style.transform ='translateX(300px)'; 
+      setTimeout(()=>{
+      btn.style.transform ='translateX(400px)';
+      setTimeout(()=>{
+      btn.style.transform ='translateX(500px)';
+  },1000);
+},1000);
+},1000);
+},1000);
+},1000);
+
+
+</script>
    
-   </script>
+   
 </body>
 </html>
